samples/_failures_safe/1761466153_35a8bc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a8f81c98.c: In function ‘matrix_transpose’:
./samples/SAFE/__tmp_a8f81c98.c:123:9: error: expected ‘,’ or ‘;’ at end of input
  123 |         for (int j = 0
      |         ^~~
./samples/SAFE/__tmp_a8f81c98.c:123:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a8f81c98.c:123:9: error: expected declaration or statement at end of input
